--- a/01-BOM-dan-DOM/01-BOM-Method-Alert/index.html
+++ b/01-BOM-dan-DOM/01-BOM-Method-Alert/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Membuat Elemen</title>
+    <title>Method Alert</title>
   </head>
   <body>
-    <div id="content"></div>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
